  (since 2.1pre1)
- C preprocessor statements (#if, #ifdef, etc) were highlighted in Java
  mode, which is incorrect (since 1.7pre5)
- Passing the -nosession switch to jEdit would throw a null pointer exception
  (since 2.2pre1)
- Clear register command didn't display anything in the status bar
  (since 2.2pre1)

+ Plugin Updates

- Console 1.7.2

+ Installer Updates

- Text-only install now supported; specify the "text" parameter on the
  command line
- Directories are now created with the correct permissions on Unix

* Version 2.2pre1

+ New Features

- You can now search for strings inside all files in a directory, recursively
- 'Clear Register' command (primarily for macros)
- Macros are now also loaded from $JEDIT_HOME/macros
- Some sample macros are now included with jEdit
- Search and replace operations can now be recorded in macros
- 'Close All Buffers' and 'Exit' commands now display a dialog box listing
  all unsaved buffers
- In C/C++/Java modes, typing '}' will immediately reindent the current line
- 'QuickSearch' text field in the tool bar; no need to open Search&Replace
  dialog box to find a string
- Multiple sessions/desktops can now be saved and loaded

+ Enhancements

- The caret is now moved to where the change was when Undo is invoked
- Most path name constructs are now routed through constructPath()

+ Bug Fixes

- PatchTokenMarker had a bogus dependency on the jEdit core

+ API Changes

- GUIUtilities.show/hideWaitCursor() becomes View.show/hideWaitCursor()
- Mode system cleanup - this breaks XMode
- Several images have been removed from org.gjt.sp.jedit.toolbar package,
  so plugins that use them will have to include those images in their
  JAR file

+ Plugin Updates

- Console 1.7.1

* Version 2.1final

+ New Features

- Eiffel syntax highlighting (Artur Biesiadowski)

+ Enhancements

- Font selector lists all available fonts if JDK 1.2 is available (defaults
  to Java predefined fonts with JDK 1.1) (Jason Ginchereau)

+ Plugin Updates
